--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Himanshu
-    </title>
+    <title>shukla himanshu</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-   <div id="hgf"> Shukla</div>
-   <div id="qwe">svornnenveoije</div>
-	  <div>sbiuefebv</div>
 	<script src="index.js"></script>
+    <div><img src="Screenshot 2023-11-23 175730.png"></div>
+    <div id="ug">
+        Hii, i am himanshu belongs to lko.
+        currently pursuing bachelor of technology in artificial intelligence from galgotias college of engineering and technology.</div>
+<div id="hs">
+   completed my intermediate from swarnin public school
+</div>  
+<form>
+    <label>jefh</label>
+    <input type="text" name="fo4ueoh">
+</form> 
+    
   </body>
 </html>
